# SpinOps

./: .flake8  .gitignore  .readthedocs.yaml  CHANGELOG.md  MANIFEST.in  Makefile  Q.ipynb  README.md  SpinOps.c  TODO.md  makefile  mypy.ini  pySpinOp.pyd  pySpinOp.pyx  pylintrc  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  spinOp.c  spinOp.h  spinOps.pyx  spinOpy.pyx  test.ipynb
.github/workflows/: build_and_test.yml  publish-to-pypi.yml  publish.yml  publish_wheels.yml  wheels.yml
docs/: conf.py  index.rst  modules.rst  requirements.txt  spinOps.rst
examples/: tutorial1.ipynb
lib/: makefile  spatialOps.c  spatialOps.h  spinOp.c  spinOp.h  spinOps.c  spinOps.h
source/: conf.py
spinOps/: __init__.py  spinOps.c  spinOps.pxd  spinOps.pyx
spinOps/c_code/: angular_momentum.c  angular_momentum.h  fact.c  fact.h  makefile  spatial.c  spatial.h  spin.c  spin.h  test
tests/: test_clebsch.py  test_fictitious_half_ops.py  test_operators.py  test_spatial.py  test_spinOps.py  test_tlm.py  test_wigner_d.py
